--- a/DWS_NB1_CII_ML_is_difficult.ipynb
+++ b/DWS_NB1_CII_ML_is_difficult.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/dwsmithPhys/PY580_ML_S2023/blob/main/DWS_NB1_CII_ML_is_difficult.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "8DjuTFCOr-7S"
       },
       "source": [
@@ -79,7 +89,7 @@
         "<li> For $f(x)=2x$, $N_{\\mathrm{train}}=10$ and $\\sigma=0$ (noiseless case), train the three classes of models (linear, third-order polynomial, and tenth order polynomial) for a training set when $x_i  \\in [0,1]$. Make graphs comparing fits for different order of polynomials. Which model fits the data the best?\n",
         "\n",
         "<font color = red> They all fit pretty much the same.  Which make sense since we are just fitting noiseless, linear data with curves that are as, or more, expressive (linear-or-higher-order polynomials).\n",
-        "<font color = black>\n",
+        "<font color = default>\n",
         "<li> Do you think that the data that has the least error on the training set will also make the best predictions? Why or why not? Can you try to discuss and formalize your intuition? What can go right and what can go wrong?\n",
         "\n",
         "<font color = red> The one that fits the best on the training set is not necessarily the the one that will make the best predictions.  If you have noise in your training set, and you don't have a very large training set the model will end up fitting some \"pseudopatterns\" it sees in the noise and not the actual underlying behavior.  Thus, when you go to fit/predict new data with different noise, the model will not do as well because the noise it was trained on is gone.\n",
@@ -370,7 +380,8 @@
       "version": "3.6.6"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
