--- a/DWS_NB1_CII_ML_is_difficult.ipynb
+++ b/DWS_NB1_CII_ML_is_difficult.ipynb
@@ -86,6 +86,7 @@
         "\n",
         "Run the code for the following cases:\n",
         "<ul> \n",
+        "<font color = default>\n",
         "<li> For $f(x)=2x$, $N_{\\mathrm{train}}=10$ and $\\sigma=0$ (noiseless case), train the three classes of models (linear, third-order polynomial, and tenth order polynomial) for a training set when $x_i  \\in [0,1]$. Make graphs comparing fits for different order of polynomials. Which model fits the data the best?\n",
         "\n",
         "<font color = red> They all fit pretty much the same.  Which make sense since we are just fitting noiseless, linear data with curves that are as, or more, expressive (linear-or-higher-order polynomials).\n",
@@ -93,26 +94,26 @@
         "<li> Do you think that the data that has the least error on the training set will also make the best predictions? Why or why not? Can you try to discuss and formalize your intuition? What can go right and what can go wrong?\n",
         "\n",
         "<font color = red> The one that fits the best on the training set is not necessarily the the one that will make the best predictions.  If you have noise in your training set, and you don't have a very large training set the model will end up fitting some \"pseudopatterns\" it sees in the noise and not the actual underlying behavior.  Thus, when you go to fit/predict new data with different noise, the model will not do as well because the noise it was trained on is gone.\n",
-        "<font color = black>\n",
+        "<font color = default>\n",
         "<li>Check your answer by seeing how well your fits predict newly generated test data (including on data outside the range you fit on, for example $x \\in [0,1.2]$) using the code below. How well do you do on points in the range of $x$ where you trained the model? How about points outside the original training data set? \n",
         "\n",
         "<font color = red> They all fit pretty much the same.  Which again makes sense since we are just fitting perfect, noiseless data.\n",
-        "<font color = black>\n",
+        "<font color = default>\n",
         "<li>Repeat the exercises above for $f(x)=2x$, $N_{\\mathrm{train}}=10$, and $\\sigma=1$. What changes?\n",
         "\n",
         "<font color = red> Now, in the training data, the 10th order polynomial does really well to fit all the data points but when we try it with the test set, the lower order polynomials do better, expecially outisde the range of the original training set.\n",
-        "<font color = black>\n",
+        "<font color = default>\n",
         "<li>Repeat the exercises above for $f(x)=2x$, $N_{\\mathrm{train}}=100$, and $\\sigma=1$. What changes?\n",
         "\n",
         "<font color = red> Now, the 10th order polynomial does not fit the training data as well but it does a bit better job on the test set.  The less complex models still do a better job predicting.\n",
-        "<font color = black>\n",
+        "<font color = default>\n",
         "<li> Summarize what you have learned about the relationship between model complexity (number of parameters), goodness of fit on training data, and the ability to predict well.\n",
         "\n",
         "<font color = red> What we see is that, for the training data, a more complex model is better up to a point.  In polynomial fitting that point is when the number of parameters is equal to one more than the number of data points.  After that point, adding more parameters does not help (or detract) from the fit of the training data.  \n",
         "\n",
         "<font color = red>\n",
         "That said, the same is not true for prediction or fitting of test data.  For this to go well, more complex models require more data.  More complex models are able to fit more features (have higher expressivity) even if those features are from noise and thus more data is needed so that the effects of noise get \"averaged out.\"  If the noise is not averaged out, the predictive power of the model is weakened by it taking into account noise that will be different from the noise in the test data.\n",
-        "<font color = black>\n",
+        "<font color = default>\n",
         "</ul>\n",
         "\n",
         "\n",
@@ -120,19 +121,20 @@
         "Thus far, we have considered the case where the data is generated using a model contained in the model class. Now consider  $f(x)=2x-10x^5+15x^{10}$. *Notice that the for linear and third-order polynomial the true model $f(x)$ is not contained in model class $g_\\alpha(x)$* .\n",
         "\n",
         "<ul>\n",
+        "<font color = default>\n",
         "<li> Repeat the exercises above fitting and predicting for $f(x)=2x-10x^5+15x^{10}$ for $N_{\\mathrm{train}}=10,100$ and $\\sigma=0,1$. Record your observations.\n",
         "<li> Do better fits lead to better predictions?\n",
         "\n",
         "<font color = red> Of course when there is no noise the best fit and prediction is the 10th order polynomial.  But, when we have a smaller data set, the 3rd order polynomial had the best prediction.  Again, this tracks from the idea of over-fitting the data.  The 10th order polynomial is fitting more of the noise but since the 3rd order (and linear) cannot do so as much (is less expressive), it follows the underlying trends better.\n",
-        "<font color = black>\n",
+        "<font color = default>\n",
         "<li> What is the relationship between the true model for generating the data and the model class that has the most predictive power? How is this related to the model complexity? How does this depend on the number of data points $N_{\\mathrm{train}}$ and $\\sigma$?\n",
         "\n",
         "<font color = red> As mentioned above, if there is no noise the model that is the best at prediction is the one that matches the complexity of the true model.  If there is noise (and as $\\sigma$ increases), more training data is needed for more complex models to work well as predictors.  Otherwise, those models will overfit the noise and not to so well outside the training range.  It can also be that if the $N_{\\mathrm{train}}$ is small and the $\\sigma$ is large, then the more complex model does not even fit new data in the training range as well.\n",
-        "<font color = black>\n",
+        "<font color = default>\n",
         "<li> Summarize what you think you learned about the relationship of knowing the true model class and predictive power.\n",
         "\n",
         "<font color = red> The better you know the true model, the better the predictive power but this is only true in the limit where the noise is small compared to the training data set size.  Your options to improve the predicitve power of your model is to (a) decrease the noise in your training data and/or (b) increase the number of points in your training data.\n",
-        "<font color = black>"
+        "<font color = default>"
       ]
     },
     {
